[intern]more addressbook cleanups, filters and vFolders have undergone intensive testing